--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title title="Online Shoping site in India: Shop Online for Mobiles, Books, Watches..">Online Shoping site in India: Shop Online for Mobiles, Books, Watches...<em>amazon.in</em></title>
-     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/icon.png"> 
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="upper-part">
             <div class="left-upper-part">
                 <div class="logo"><img src="img/logo.png"></div>
-                <div></div>
+                <div class="loc">Hello<br>Select your address</div>
             </div>
             <div class="mid-upper-part">b</div>
             <div class="right-upper-part">c</div>
