--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -1,13 +1,16 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title title="Online Shoping site in India: Shop Online for Mobiles, Books, Watches..">Online Shoping site in India: Shop Online for Mobiles, Books, Watches...<em>amazon.in</em></title>
-    <link rel="icon" href="img/icon.png"> 
+    <title title="Online Shoping site in India: Shop Online for Mobiles, Books, Watches..">Online Shoping site in India:
+        Shop Online for Mobiles, Books, Watches...<em>amazon.in</em></title>
+    <link rel="icon" href="img/icon.png">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="upper-part">
@@ -15,11 +18,14 @@
                 <div class="logo"><img src="img/logo.png"></div>
                 <div class="loc">Hello<br>Select your address</div>
             </div>
-            <div class="mid-upper-part">b</div>
+            <div class="mid-upper-part"></div>
             <div class="right-upper-part">c</div>
         </div>
-        <div class="lower-part"></div>
+        <div class="lower-part">
+          <div class="menubar">&#9776 All</div>
+        </div>
     </header>
-    
+
 </body>
+
 </html>
