--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -15,15 +15,26 @@
     <header>
         <div class="upper-part">
             <div class="left-upper-part">
-                <div class="logo"><img src="img/logo.png"></div>
-                <div class="loc">Hello<br>Select your address</div>
+                <div class="logo"><a href="http://127.0.0.1:5500/homepage.html" target="_self"><img
+                            src="img/logo.png"></a></div>
+                <div class="loc"> Hello<br><b>Select your address</b></div>
             </div>
-            <div class="mid-upper-part"></div>
-            <div class="right-upper-part">c</div>
-        </div>
-        <div class="lower-part">
-          <div class="menubar">&#9776 All</div>
-        </div>
+            <div class="mid-upper-part">
+                <div class="wrapper">a</div>
+            </div>
+
+            <div class="right-upper-part">
+                <div class="lang">a</div>
+                <div class="account">b</div>
+                <div class="order">c</div>
+                <div class="cart">d</div>
+            </div>
+            <div class="lower-part">
+                <div>
+                    <div class="menubar">&#9776 All</div>
+                    <div class="menu-2"></div>
+                </div>
+            </div>
     </header>
 
 </body>
