--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -31,8 +31,24 @@
             </div>
             <div class="lower-part">
                 <div>
-                    <div class="menubar">&#9776 All</div>
-                    <div class="menu-2"></div>
+                    <div class="left-lower-part"><a href="#">&#9776 All</a></div>
+                    <div class="mid-lower-part">
+                        <a href="#">Best Sellers</a>
+                        <a href="#">Mobiles</a>
+                        <a href="#">Today's Deals</a>
+                        <a href="#">Customer Services</a>
+                        <a href="#">Electronics</a>
+                        <a href="#">Books</a>
+                        <a href="#">Prime</a>
+                        <a href="#">Fashion</a>
+                        <a href="#">New Releases</a>
+                        <a href="#">Home & Kitchen</a>
+                        <a href="#">Amazon Pay</a>
+                        <a href="#">Computers</a>
+                        <a href="#">Coupans</a>
+                        <a href="#">Toys & Games</a>
+                    </div>
+                    <div class="right-lower-part"></div>
                 </div>
             </div>
     </header>
