--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -31,22 +31,22 @@
             </div>
             <div class="lower-part">
                 <div>
-                    <div class="left-lower-part"><a href="#">&#9776 All</a></div>
+                    <div class="left-lower-part"><a href="#" target="_self">&#9776 All</a></div>
                     <div class="mid-lower-part">
-                        <a href="#">Best Sellers</a>
-                        <a href="#">Mobiles</a>
-                        <a href="#">Today's Deals</a>
-                        <a href="#">Customer Services</a>
-                        <a href="#">Electronics</a>
-                        <a href="#">Books</a>
-                        <a href="#">Prime</a>
-                        <a href="#">Fashion</a>
-                        <a href="#">New Releases</a>
-                        <a href="#">Home & Kitchen</a>
-                        <a href="#">Amazon Pay</a>
-                        <a href="#">Computers</a>
-                        <a href="#">Coupans</a>
-                        <a href="#">Toys & Games</a>
+                        <a href="#" target="_self">Best Sellers</a>
+                        <a href="#" target="_self">Mobiles</a>
+                        <a href="#" target="_self">Today's Deals</a>
+                        <a href="#" target="_self">Customer Services</a>
+                        <a href="#" target="_self">Electronics</a>
+                        <a href="#" target="_self">Books</a>
+                        <a href="#" target="_self">Prime</a>
+                        <a href="#" target="_self">Fashion</a>
+                        <a href="#" target="_self">New Releases</a>
+                        <a href="#" target="_self">Home & Kitchen</a>
+                        <a href="#" target="_self">Amazon Pay</a>
+                        <a href="#" target="_self">Computers</a>
+                        <a href="#" target="_self">Coupans</a>
+                        <a href="#" target="_self">Toys & Games</a>
                     </div>
                     <div class="right-lower-part"></div>
                 </div>
