--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -15,42 +15,44 @@
     <header>
         <div class="upper-part">
             <div class="left-upper-part">
-                <div class="logo"><a href="http://127.0.0.1:5500/homepage.html" target="_self"><img
-                            src="img/logo.png"></a></div>
-                <div class="loc"> Hello<br><b>Select your address</b></div>
+                <div class="logo"><a href="http://127.0.0.1:5500/homepage.html" target="_self">
+                        <img src="img/logo.png">.in</a>
+                </div>
+                <div class="loc">
+                    <div class="loc1"><img src="#"></div>
+                    <div class="loc2">Hello<br><b>Select your address</b></div>
+                </div>
             </div>
             <div class="mid-upper-part">
                 <div class="wrapper">a</div>
             </div>
 
             <div class="right-upper-part">
-                <div class="lang">a</div>
-                <div class="account">b</div>
-                <div class="order">c</div>
-                <div class="cart">d</div>
+                <div class="lang"><img src="img/flag.png"></div>
+                <div class="account">Hello ,Sigh in<br>Account & Lists</div>
+                <div class="order"><a href="#" target="_self">Returns<br>& Orders</a></div>
+                <div class="cart"><a href="#" target="_self"><img src="img/cart.png">Cart</a></div>
             </div>
-            <div class="lower-part">
-                <div>
-                    <div class="left-lower-part"><a href="#" target="_self">&#9776 All</a></div>
-                    <div class="mid-lower-part">
-                        <a href="#" target="_self">Best Sellers</a>
-                        <a href="#" target="_self">Mobiles</a>
-                        <a href="#" target="_self">Today's Deals</a>
-                        <a href="#" target="_self">Customer Services</a>
-                        <a href="#" target="_self">Electronics</a>
-                        <a href="#" target="_self">Books</a>
-                        <a href="#" target="_self">Prime</a>
-                        <a href="#" target="_self">Fashion</a>
-                        <a href="#" target="_self">New Releases</a>
-                        <a href="#" target="_self">Home & Kitchen</a>
-                        <a href="#" target="_self">Amazon Pay</a>
-                        <a href="#" target="_self">Computers</a>
-                        <a href="#" target="_self">Coupans</a>
-                        <a href="#" target="_self">Toys & Games</a>
-                    </div>
-                    <div class="right-lower-part"></div>
-                </div>
+        </div>
+        <div class="lower-part">
+            <div class="left-lower-part"><a href="#" target="_self">&#9776 All</a></div>
+            <div class="mid-lower-part">
+                <a href="#" target="_self" class="mlp-seller">Best Sellers</a>
+                <a href="#" target="_self" class="mlp-mobiles">Mobiles</a>
+                <a href="#" target="_self" class="mlp-deals">Today's Deals</a>
+                <a href="#" target="_self" class="mlp-service">Customer Services</a>
+                <a href="#" target="_self" class="mlp-electronics">Electronics</a>
+                <a href="#" target="_self" class="mlp-books">Books</a>
+                <a href="#" target="_self" class="mlp-prime">Prime</a>
+                <a href="#" target="_self" class="mlp-fashion">Fashion</a>
+                <a href="#" target="_self" class="mlp-release">New Releases</a>
+                <a href="#" target="_self" class="mlp-home">Home & Kitchen</a>
+                <a href="#" target="_self" class="mlp-pay">Amazon Pay</a>
+                <a href="#" target="_self" class="mlp-computer">Computers</a>
+                <a href="#" target="_self" class="mlp-coupans">Coupans</a>
+                <a href="#" target="_self" class="mlp-toys">Toys & Games</a>
             </div>
+        </div>
     </header>
 
 </body>
