--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -19,18 +19,17 @@
                         <img src="img/logo.png">.in</a>
                 </div>
                 <div class="loc">
-                    <div class="loc1"><img src="#"></div>
+                    <div class="loc1"><img src="img/loc.jpeg"></div>
                     <div class="loc2">Hello<br><b>Select your address</b></div>
                 </div>
             </div>
             <div class="mid-upper-part">
-                <div class="wrapper">a</div>
             </div>
 
             <div class="right-upper-part">
                 <div class="lang"><img src="img/flag.png"></div>
-                <div class="account">Hello ,Sigh in<br>Account & Lists</div>
-                <div class="order"><a href="#" target="_self">Returns<br>& Orders</a></div>
+                <div class="account">Hello ,Sigh in<br><b>Account & Lists</b></div>
+                <div class="order"><a href="#" target="_self">Returns<br><b>& Orders</b></a></div>
                 <div class="cart"><a href="#" target="_self"><img src="img/cart.png">Cart</a></div>
             </div>
         </div>
