--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -8,7 +8,7 @@
     <title title="Online Shoping site in India: Shop Online for Mobiles, Books, Watches..">Online Shoping site in India:
         Shop Online for Mobiles, Books, Watches...<em>amazon.in</em></title>
     <link rel="icon" href="img/icon.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="homepage.css">
 </head>
 
 <body>
@@ -19,11 +19,16 @@
                         <img src="img/logo.png">.in</a>
                 </div>
                 <div class="loc">
-                    <div class="loc1"><img src="img/loc.jpeg"></div>
+                    <div class="loc1"><img src="img/loc.png"></div>
                     <div class="loc2">Hello<br><b>Select your address</b></div>
                 </div>
             </div>
             <div class="mid-upper-part">
+                <div class="dropdown">All</div>
+                <div class="searchbox">
+                    <input type="text" class="search">
+                </div>
+                <div class="search-btn"><button class="btn"><img src="img/search.png"></button></div>
             </div>
 
             <div class="right-upper-part">
