--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -16,7 +16,7 @@
         <div class="upper-part">
             <div class="left-upper-part">
                 <div class="logo"><a href="http://127.0.0.1:5500/homepage.html" target="_self">
-                        <img src="img/logo.png">.in</a>
+                        <img src="img/logo.png"><b>.in</b></a>
                 </div>
                 <div class="loc">
                     <div class="loc1"><img src="img/loc.png"></div>
@@ -59,7 +59,83 @@
         </div>
     </header>
 
-    <section></section>
+    <section>abcd</section>
+
+    <footer>
+        <div class="footer1"><a href="#" target="_self">Back to top</a></div>
+        <div class="footer2">
+            <div class="footer-left">
+                <div class="default">Get to know Us</div>
+                <ul>
+                    <li>About Us</li>
+                    <li>Careers</li>
+                    <li>Press Releases</li>
+                    <li>Amazon Cares</li>
+                    <li>Gift a Smile</li>
+                    <li>Amazon Science</li>
+                </ul>
+            </div>
+            <div class="footer-mid1">
+                <div class="default">Connect with Us</div>
+                <ul>
+                    <li>Facebook</li>
+                    <li>Twitter</li>
+                    <li>Instagram</li>
+                </ul>
+            </div>
+            <div class="footer-mid2">
+                <div class="default">Make Money with Us</div>
+                <ul>
+                    <li>Sell on Amazon</li>
+                    <li>Sell under Amazon Accelerator</li>
+                    <li>Amazon Global Selling</li>
+                    <li>Become an Affiliate</li>
+                    <li>Fulfilment by Amazon</li>
+                    <li>Advertise your Prducts</li>
+                    <li>Amazon Pay on Merchants</li>
+                </ul>
+            </div>
+            <div class="footer-right">
+                <div class="default">Let Us Help You</div>
+                <ul>
+                    <li>COVID-19 and Amazon</li>
+                    <li>Your Account</li>
+                    <li>Returns Centre</li>
+                    <li>100% Purchase Protection</li>
+                    <li>Amazon App Download</li>
+                    <li>Amazon Assistant Download</li>
+                    <li>Help</li>
+                </ul>
+            </div>
+        </div>
+       <!-- <div class="footer3">
+            <div class="footerbase">
+                <div class="footerlogo"><img src="img/logo.png"></div>
+                <div class="language"><div class="by_default_option"><img src="img/globe.jpg">&nbsp;&nbsp;English</div></div>
+            </div>
+            <div class="country">
+                <ul>
+                    <li>Australia</li>
+                    <li>Brazil</li>
+                    <li>Canada</li>
+                    <li>China</li>
+                    <li>France</li>
+                    <li>Germany</li>
+                    <li>Italy</li>
+                    <li>Japan</li>
+                    <li>Mexico</li>
+                    <li>Netherland</li>
+                    <li>Poland</li>
+                    <li>Singapore</li>
+                    <li>Spain</li>
+                    <li>Turkey</li>
+                    <li>United Arab Emirates</li>
+                    <li>United Kingdom</li>
+                    <li>United States</li>
+                </ul>
+            </div>
+        </div>-->
+    </footer>
 
 </body>
 
