--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -108,10 +108,12 @@
                 </ul>
             </div>
         </div>
-       <!-- <div class="footer3">
+        <div class="footer3">
             <div class="footerbase">
                 <div class="footerlogo"><img src="img/logo.png"></div>
-                <div class="language"><div class="by_default_option"><img src="img/globe.jpg">&nbsp;&nbsp;English</div></div>
+                <div class="language">
+                    <div class="by_default_option"><img src="img/globe.jpg">&nbsp;&nbsp;English</div>
+                </div>
             </div>
             <div class="country">
                 <ul>
@@ -134,7 +136,7 @@
                     <li>United States</li>
                 </ul>
             </div>
-        </div>-->
+        </div>
     </footer>
 
 </body>
