--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -137,6 +137,63 @@
                 </ul>
             </div>
         </div>
+        <div class="footer4">
+            <div class="moreonamazon">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <a href="#" target="_self"> <b>AbeBooks</b></a><br>
+                                <span>Books,art<br>& collection</span>
+                            </td>
+                            <td>
+                                <a href="#" target="_self"><b>Amazon Web Services</b></a><br>
+                                <span>Stable Cloud<br>Computing Services</span>
+                            </td>
+                            <td>
+                                <a href="#" target="_self"><b>Audible</b></a><br>
+                                <span>Download <br>Audio Books</span>
+                            </td>
+                            <td>
+                                <a href="#" target="_self"><b>DPReview</b></a><br>
+                                <span>Digital <br>Photography</span>
+                            </td>
+                            <td>
+                                <a href="#" target="_self"><b>IMDb</b></a><br>
+                                <span>Movies,TV <br>& Celebrities</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="#" target="_self"> <b>Shopbop</b></a><br>
+                                <span>Designer<br>Fashion Brands</span>
+                            </td>
+                            <td>
+                                <a href="#" target="_self"><b>Amazon Business</b></a><br>
+                                <span>Everything For<br>Your Business</span>
+                            </td>
+                            <td>
+                                <a href="#" target="_self"><b>Prime Now</b></a><br>
+                                <span>2-Hours Delivery <br>on Everyday Items</span>
+                            </td>
+                            <td>
+                                <a href="#" target="_self"><b>Amazon Prime Music</b></a><br>
+                                <span>75 millions songs. ad-free<br>Over 10 million prodcast episodes</span>
+                            </td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="footer5">
+            <ul>
+                <li>Conditions of Use & Sale</li>
+                <li>Privacy Notice</li>
+                <li>Interest-Based Ads</li>
+                <li>&copy;1996-2022,Amazon.com,Inc. or its affiliates</li>
+            </ul>
+        </div>
     </footer>
 
 </body>
