--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -64,48 +64,50 @@
     <footer>
         <div class="footer1"><a href="#" target="_self">Back to top</a></div>
         <div class="footer2">
-            <div class="footer-left">
-                <div class="default">Get to know Us</div>
-                <ul>
-                    <li>About Us</li>
-                    <li>Careers</li>
-                    <li>Press Releases</li>
-                    <li>Amazon Cares</li>
-                    <li>Gift a Smile</li>
-                    <li>Amazon Science</li>
-                </ul>
-            </div>
-            <div class="footer-mid1">
-                <div class="default">Connect with Us</div>
-                <ul>
-                    <li>Facebook</li>
-                    <li>Twitter</li>
-                    <li>Instagram</li>
-                </ul>
-            </div>
-            <div class="footer-mid2">
-                <div class="default">Make Money with Us</div>
-                <ul>
-                    <li>Sell on Amazon</li>
-                    <li>Sell under Amazon Accelerator</li>
-                    <li>Amazon Global Selling</li>
-                    <li>Become an Affiliate</li>
-                    <li>Fulfilment by Amazon</li>
-                    <li>Advertise your Prducts</li>
-                    <li>Amazon Pay on Merchants</li>
-                </ul>
-            </div>
-            <div class="footer-right">
-                <div class="default">Let Us Help You</div>
-                <ul>
-                    <li>COVID-19 and Amazon</li>
-                    <li>Your Account</li>
-                    <li>Returns Centre</li>
-                    <li>100% Purchase Protection</li>
-                    <li>Amazon App Download</li>
-                    <li>Amazon Assistant Download</li>
-                    <li>Help</li>
-                </ul>
+            <div class="footer2-parent">
+                <div class="footer2-child1">
+                    <ul>
+                        <li><b>Get to know us</b></li>
+                        <li>About Us</li>
+                        <li>Careers</li>
+                        <li>Press Releases</li>
+                        <li>Amazon Cares</li>
+                        <li>Gift a Smile</li>
+                        <li>Amazon Science</li>
+                    </ul>
+                </div>
+                <div class="footer2-child2">
+                    <ul>
+                        <li><b>Connect with us</b></li>
+                        <li>Facebook</li>
+                        <li>Twitter</li>
+                        <li>Instagram</li>
+                    </ul>
+                </div>
+                <div class="footer2-child3">
+                    <ul>
+                        <li><b>Make Money with Us</b></li>
+                        <li>Sell on Amazon</li>
+                        <li>Sell under Amazon Accelerator</li>
+                        <li>Amazon Global Selling</li>
+                        <li>Become an Affiliate</li>
+                        <li>Fulfilment by Amazon</li>
+                        <li>Advertise your Products</li>
+                        <li>Amazon pay on Merchants</li>
+                    </ul>
+                </div>
+                <div class="footer2-child4">
+                    <ul>
+                        <li><b>Let us Help You</b></li>
+                        <li>Covid-19 and Amazon</li>
+                        <li>Your Account</li>
+                        <li>Returns Centre</li>
+                        <li>100% Purchase Protection</li>
+                        <li>Amazon App Download</li>
+                        <li>Amazon Assistant Download</li>
+                        <li>Help</li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="footer3">
@@ -138,53 +140,11 @@
             </div>
         </div>
         <div class="footer4">
-            <div class="moreonamazon">
-                <table>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <a href="#" target="_self"> <b>AbeBooks</b></a><br>
-                                <span>Books,art<br>& collection</span>
-                            </td>
-                            <td>
-                                <a href="#" target="_self"><b>Amazon Web Services</b></a><br>
-                                <span>Stable Cloud<br>Computing Services</span>
-                            </td>
-                            <td>
-                                <a href="#" target="_self"><b>Audible</b></a><br>
-                                <span>Download <br>Audio Books</span>
-                            </td>
-                            <td>
-                                <a href="#" target="_self"><b>DPReview</b></a><br>
-                                <span>Digital <br>Photography</span>
-                            </td>
-                            <td>
-                                <a href="#" target="_self"><b>IMDb</b></a><br>
-                                <span>Movies,TV <br>& Celebrities</span>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <a href="#" target="_self"> <b>Shopbop</b></a><br>
-                                <span>Designer<br>Fashion Brands</span>
-                            </td>
-                            <td>
-                                <a href="#" target="_self"><b>Amazon Business</b></a><br>
-                                <span>Everything For<br>Your Business</span>
-                            </td>
-                            <td>
-                                <a href="#" target="_self"><b>Prime Now</b></a><br>
-                                <span>2-Hours Delivery <br>on Everyday Items</span>
-                            </td>
-                            <td>
-                                <a href="#" target="_self"><b>Amazon Prime Music</b></a><br>
-                                <span>75 millions songs. ad-free<br>Over 10 million prodcast episodes</span>
-                            </td>
-                            <td></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+                <div class="footer4-1stchild">a</div>
+                <div class="footer4-2ndchild">b</div>
+                <div class="footer4-3rdchild">c</div>
+                <div class="footer4-4th child">d</div>
+                <div class="footer4-5th child">e</div>
         </div>
         <div class="footer5">
             <ul>
