--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -140,11 +140,11 @@
             </div>
         </div>
         <div class="footer4">
-                <div class="footer4-1stchild">a</div>
-                <div class="footer4-2ndchild">b</div>
-                <div class="footer4-3rdchild">c</div>
-                <div class="footer4-4th child">d</div>
-                <div class="footer4-5th child">e</div>
+                <div class="footer4-1stchild">abcdef</div>
+                <div class="footer4-2ndchild">bvnjdkvbv</div>
+                <div class="footer4-3rdchild">vjbvjbvc</div>
+                <div class="footer4-4th child">vjdvbd</div>
+                <div class="footer4-5th child">vjve</div>
         </div>
         <div class="footer5">
             <ul>
