--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -118,33 +118,51 @@
                 </div>
             </div>
             <div class="country">
-                <ul>
-                    <li>Australia</li>
-                    <li>Brazil</li>
-                    <li>Canada</li>
-                    <li>China</li>
-                    <li>France</li>
-                    <li>Germany</li>
-                    <li>Italy</li>
-                    <li>Japan</li>
-                    <li>Mexico</li>
-                    <li>Netherland</li>
-                    <li>Poland</li>
-                    <li>Singapore</li>
-                    <li>Spain</li>
-                    <li>Turkey</li>
-                    <li>United Arab Emirates</li>
-                    <li>United Kingdom</li>
-                    <li>United States</li>
-                </ul>
+                    <ul>
+                        <li>Australia</li>
+                        <li>Brazil</li>
+                        <li>Canada</li>
+                        <li>China</li>
+                        <li>France</li>
+                        <li>Germany</li>
+                        <li>Italy</li>
+                        <li>Japan</li>
+                        <li>Mexico</li>
+                        <li>Netherland</li>
+                        <li>Poland</li>
+                        <li>Singapore</li>
+                        <li>Spain</li>
+                        <li>Turkey</li>
+                        <li>United Arab Emirates</li>
+                        <li>United Kingdom</li>
+                        <li>United States</li>
+                    </ul>
             </div>
         </div>
         <div class="footer4">
-                <div class="footer4-1stchild">abcdef</div>
-                <div class="footer4-2ndchild">bvnjdkvbv</div>
-                <div class="footer4-3rdchild">vjbvjbvc</div>
-                <div class="footer4-4th child">vjdvbd</div>
-                <div class="footer4-5th child">vjve</div>
+            <div class="footer4-parent">
+                <div class="footer4-1stchild">
+                    <a href="#" target="_self"><b>AbeBooks</b><br>Books,art <br>& collection</a><br><br>
+                    <a href="#" target="_self"><b>Shopbop</b><br>Designer<br>Fashion Brands</a>
+                </div>
+                <div class="footer4-2ndchild">
+                    <a href="#" target="_self"><b>Amazon Web Services</b><br>Scalable Cloud<br>Computing
+                        Services</a><br><br>
+                    <a href="#" target="_self"><b>Amazon Business</b><br>Everything For<br>Your Business</a>
+                </div>
+                <div class="footer4-3rdchild">
+                    <a href="#" target="_self"><b>Audible</b><br>Download<br>Audio Books</a><br><br>
+                    <a href="#" target="_self"><b>Prime Now</b><br>2-Hours Delivery<br>Fashion Brands</a>
+                </div>
+                <div class="footer4-4thchild">
+                    <a href="#" target="_self"><b>DPReview</b><br>Digital<br>Photography</a><br><br>
+                    <a href="#" target="_self"><b>Amazon Prime Music</b><br>75 million songs, ad-free<br>Over 10 million
+                        podcast episodes</a>
+                </div>
+                <div class="footer4-5thchild">
+                    <a href="#" target="_self"><b>IMDb</b><br>Movies,TV <br>& celebrities</a><br><br>
+                </div>
+            </div>
         </div>
         <div class="footer5">
             <ul>
