--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="upper-part">
             <div class="left-upper-part">
                 <div class="logo"><a href="http://127.0.0.1:5500/homepage.html" target="_self">
@@ -59,7 +59,42 @@
         </div>
     </header>
 
-    <section>abcd</section>
+    <section class="section">
+        <div class="carousel">
+            <img src="img/carousel5.jpg">
+            <div class="card">
+                <div class="card-1stchild">
+                    <div class="grandchild1"> <h3>Amazon Pay | Pay utility <br>bills fast & conveniently  </h3> </div>
+                    <div class="grandchild2">
+                        <div class="a">
+                            <div class="aa"><img src="img/Electricity.jpg"> <br> Electricity bill</div>
+                            <div class="ab"><img src="img/LPG.jpg"> <br> LPG gas cylinder</div>
+                        </div>
+                        <div class="b">
+                            <div class="ba"><img src="img/Broadband.jpg"><br>Broadband bill</div>
+                            <div class="bb"><img src="img/Water.jpg"> <br>Water bill</div>
+                        </div>
+                    </div>
+                    <div class="grandchild3"><a href="#">Explore more from Amazon Pay</a></div>
+                </div>
+                <div class="card-2ndchild">
+                    <div class="grandchild-a"> <h3> Headphones for your music needs </h3> </div>
+                    <div class="grandchild-b"><img src="img/earphone.jpg"></div>
+                    <div class="grandchild-c"><a href="#">See more</a></div>
+                </div>
+                <div class="card-3rdchild">
+                    <div class="grandchild-a"> <h3> Up to 70% | Clearance store </h3> </div>
+                    <div class="grandchild-b"><img src="img/oled.jpg"></div>
+                    <div class="grandchild-c"><a href="#">See more</a></div>
+                </div>
+                <div class="card-4thchild">
+                    <div class="grandchild-a"> <h3>For a productive home office </h3> </div>
+                    <div class="grandchild-b"><img src="img/house.jpeg"></div>
+                    <div class="grandchild-c"><a href="#">See more</a></div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <div class="footer1"><a href="#" target="_self">Back to top</a></div>
@@ -118,25 +153,25 @@
                 </div>
             </div>
             <div class="country">
-                    <ul>
-                        <li>Australia</li>
-                        <li>Brazil</li>
-                        <li>Canada</li>
-                        <li>China</li>
-                        <li>France</li>
-                        <li>Germany</li>
-                        <li>Italy</li>
-                        <li>Japan</li>
-                        <li>Mexico</li>
-                        <li>Netherland</li>
-                        <li>Poland</li>
-                        <li>Singapore</li>
-                        <li>Spain</li>
-                        <li>Turkey</li>
-                        <li>United Arab Emirates</li>
-                        <li>United Kingdom</li>
-                        <li>United States</li>
-                    </ul>
+                <ul>
+                    <li>Australia</li>
+                    <li>Brazil</li>
+                    <li>Canada</li>
+                    <li>China</li>
+                    <li>France</li>
+                    <li>Germany</li>
+                    <li>Italy</li>
+                    <li>Japan</li>
+                    <li>Mexico</li>
+                    <li>Netherland</li>
+                    <li>Poland</li>
+                    <li>Singapore</li>
+                    <li>Spain</li>
+                    <li>Turkey</li>
+                    <li>United Arab Emirates</li>
+                    <li>United Kingdom</li>
+                    <li>United States</li>
+                </ul>
             </div>
         </div>
         <div class="footer4">
