--- a/Amazon_replica/homepage.html
+++ b/Amazon_replica/homepage.html
@@ -94,6 +94,39 @@
                 </div>
             </div>
         </div>
+        <div class="product">
+            <div class="card2">
+                <div class="card2child1"><img src="img/movie trailor.jpg"></div>
+                <div class="card2child2">
+                    <div class="grandchild1"> <h3>Amazon Pay | Pay utility <br>bills fast & conveniently  </h3> </div>
+                    <div class="grandchild2">
+                        <div class="a">
+                            <div class="aa"><img src="img/credit card bill.jpg"> <br> Creditcard bill</div>
+                            <div class="ab"><img src="img/googlepay recharge.jpg"> <br> Google pay recharge</div>
+                        </div>
+                        <div class="b">
+                            <div class="ba"><img src="img/postpaid bill.jpg"><br>Postpaid bill</div>
+                            <div class="bb"><img src="img/subscription.jpg"> <br>Subscription</div>
+                        </div>
+                    </div>
+                    <div class="grandchild3"><a href="#">Explore more from Amazon Pay</a></div>
+                </div>
+                <div class="card2child3">
+                    <div class="grandchild1"> <h3>Shop by Category</h3> </div>
+                    <div class="grandchild2">
+                        <div class="a">
+                            <div class="aa"><img src="img/fresh.jpg"> <br>Fresh</div>
+                            <div class="ab"><img src="img/mobile.jpg"> <br> Mobiles</div>
+                        </div>
+                        <div class="b">
+                            <div class="ba"><img src="img/fashion.jpg"><br>Fashion</div>
+                            <div class="bb"><img src="img/electronics.jpg"> <br>Electronics</div>
+                        </div>
+                    </div>
+                    <div class="grandchild3"><a href="#">See More</a></div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
