--- a/Amazon_replica/product.html
+++ b/Amazon_replica/product.html
@@ -25,8 +25,61 @@
             </div>
             <div class="leftpart-2ndchild"><img src="img/samsung1.jpg"> <br> Roll over image to zoom in</div>
         </div>
-        <div class="centerpart">b</div>
-        <div class="rightpart">c</div>
+        <div class="centerpart">
+            <div class="description">
+                <p>OnePlus 7 pro (Mirror grey, 8GB RAM, Fluid AMOLED Display, 256GB Storage, 4000mAH Battery)</p>
+                <span class="desp">Visit the OnePlus Store</span><br>
+                <span class="desp"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img
+                        src="img/star.png"><img src="img/star.png">&nbsp;&nbsp;&nbsp;22,858ratings | 1000+ answered
+                    question</span>
+                <hr>
+                <div class="rw">
+                    <ul>
+                        <li><img src="img/replacement.png"><br>7 days<br>Replacement</li>
+                        <li><img src="img/warranty.png"><br>1 year<br>Warranty</li>
+                    </ul>
+                    <hr>
+                </div>
+                <div class="product-description">
+                    <h4>Currently unavailable</h4>
+                    <p>We don't know when or if this item will be back in stock.</p><br>
+                    <ul>
+                        <li>Rear Camera-48MP (Primary) + 8MP (Tele-photo) + 16MP (Ultrawide)|Front Camera - 16 MP POP-UP
+                            Camera.</li>
+                        <li>16.9 centimeters (6.67-inch) multi touch capacitive touchscreen with 3120 x 1440 pixels
+                            resolution</li>
+                        <li>Android Oxygen operating system with 2.84GHz Snapdragon 855 octa core processor</li>
+                        <li>4000mAH lithium-ion battery, The display curves over the edges for an arresting design and
+                            an immersive viewing experience</li>
+                        <li>1 year manufacturer warranty for device and 6 mnths manufacturer warranty for in-box
+                            accessories including batteries from the date of purchase</li>
+                        <li>Box also includes: Power Adapter, Type-C Cable (Support USB 2.0), Quick Start Guide, Welcome
+                            Letter, Safety Information and Warranty Card, Logo Sticker, Case, Screen Protector
+                            (pre-applied) and SIM Tray Ejector</li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+        <div class="rightpart">
+            <div class="upperchild">
+                <div class="share"><a href="#">Share</a></div>
+                <div class="socialmedia">
+                    <ul>
+                        <li><img src="img/email.png"></li>
+                        <li><img src="img/fb.png"></li>
+                        <li><img src="img/twitter.jpg"></li>
+                        <li><img src="img/pinterest.png"></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="status">
+                <h4>Currently unavailable</h4>
+                <p>We dont know when or if this item will be back in stock.</p>
+                <button class="btn">Add to Wish list</button>
+
+            </div>
+        </div>
     </div>
 
 </body>
